// Vitest Snapshot v1

exports[`Input > Input alignVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        左对齐
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        居中
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--center t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        右对齐
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--right t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;

exports[`Input > Input bannerVue demo works fine 1`] = `
<div
  class="t-input t-input--layout-horizontal t-input--size-small"
  style="border-radius: 6px; margin: 0px 16px;"
>
  <div
    class="t-input__wrap--prefix"
  >
    <div
      class="t-input__icon--prefix"
    >
      <!--v-if-->
    </div>
    <div
      class="t-input__label"
    >
      标签文字
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input__content t-input--default"
    >
      <input
        autocomplete="Off"
        class="t-input__control t-input--default"
        maxlength="-1"
        name=""
        placeholder="请输入文字"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`Input > Input baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字(选填)"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-input__tips t-input--left"
      >
        辅助说明
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Input > Input borderedVue demo works fine 1`] = `
<div
  style="--td-input-vertical-padding: 12px; background-color: rgb(255, 255, 255); padding: 16px 16px 8px;"
>
  <div
    class="input-example__label"
  >
    标签文字
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
    style="border: 1px solid rgba(220,220,220,1); border-radius: 6px;"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-error-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          
        </div>
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Input > Input customVue demo works fine 1`] = `
<div
  style="--td-input-bg-color: rgba(44, 44, 44, 1); --td-input-border-color: rgba(75, 75, 75, 1); --td-input-default-text-color: rgba(255, 255, 255, 1); --td-input-placeholder-text-color: rgba(255, 255, 255, 0.35); --td-input-label-text-color: rgba(255, 255, 255, 1);"
>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Input > Input labelVue demo works fine 1`] = `
<div
  class="t-input t-input--layout-horizontal t-input--size-small"
>
  <div
    class="t-input__wrap--prefix"
  >
    <div
      class="t-input__icon--prefix"
    >
      <!--v-if-->
    </div>
    <div
      class="t-input__label"
    >
      标签超长时最多十个字
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input__content t-input--default"
    >
      <input
        autocomplete="Off"
        class="t-input__control t-input--default"
        maxlength="-1"
        name=""
        placeholder="请输入文字"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`Input > Input layoutVue demo works fine 1`] = `
<div
  class="t-input t-input--layout-vertical t-input--size-small"
>
  <div
    class="t-input__wrap--prefix"
  >
    <div
      class="t-input__icon--prefix"
    >
      <!--v-if-->
    </div>
    <div
      class="t-input__label"
    >
      标签文字
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input__content t-input--default"
    >
      <input
        autocomplete="Off"
        class="t-input__control t-input--default"
        maxlength="-1"
        name=""
        placeholder="请输入文字"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
      <div
        class="t-input__wrap--suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-error-circle-filled"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
      </div>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`Input > Input maxLengthVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="10"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-input__tips t-input--left"
      >
        最大输入10个字符
      </div>
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-input__tips t-input--left"
      >
        最大输入10个字符，汉字算两个
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Input > Input mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Input 输入框
  </h1>
  <p
    class="summary"
  >
    用于单行文本信息输入。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字(选填)"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            <!---->
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-input__tips t-input--left"
          >
            辅助说明
          </div>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带字数限制输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="10"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-input__tips t-input--left"
          >
            最大输入10个字符
          </div>
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-input__tips t-input--left"
          >
            最大输入10个字符，汉字算两个
          </div>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带操作输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-info-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              
            </div>
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入手机号码"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  
                   操作按钮 
                  
                </span>
                <!---->
              </button>
              
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-user-avatar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 10.5c1.24 0 2.42.31 3.5.88v1.12h1v-1.14a.94.94 0 00-.49-.84 8.48 8.48 0 00-8.02 0 .94.94 0 00-.49.84v1.14h1v-1.12A7.47 7.47 0 018 10.5zM10.5 6a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0zm-1 0a1.5 1.5 0 10-3 0 1.5 1.5 0 003 0z"
                  fill="currentColor"
                />
                <path
                  d="M2.5 1.5a1 1 0 00-1 1v11a1 1 0 001 1h11a1 1 0 001-1v-11a1 1 0 00-1-1h-11zm11 1v11h-11v-11h11z"
                  fill="currentColor"
                />
              </svg>
              
            </div>
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带图标输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            
            <svg
              class="t-icon t-icon-app"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            
            <svg
              class="t-icon t-icon-app"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
          </div>
          <div
            class="t-input__label"
          >
            <!---->
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        特定类型输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            输入密码
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              type="password"
            />
            <div
              class="t-input__wrap--clearable-icon"
            >
              <svg
                class="t-icon t-icon-close-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            验证码
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="输入验证码"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              
              <div
                class="suffix"
              >
                <div
                  class="suffix--line"
                />
                <image
                  aria-label="验证码"
                  aria-role="img"
                  class="image"
                  mode="heightFix"
                  src="https://wwcdn.weixin.qq.com/node/wework/images/202010241547.ac6876be9c.png"
                />
              </div>
              
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            手机号
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="输入手机号码"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              
              <div
                style="display: flex; align-items: center;"
              >
                <div
                  class="suffix--line"
                />
                <div
                  aria-role="button"
                  class="verify"
                >
                  发送验证码
                </div>
              </div>
              
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            价格
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--right t-input--default"
              maxlength="-1"
              name=""
              placeholder="0.00"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              元
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            数量
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--right t-input--default"
              maxlength="-1"
              name=""
              placeholder="填写个数"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              个
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        输入框状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label t-input-is-error"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--error"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--error"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-input__tips t-input--left"
          >
            辅助说明
          </div>
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label t-is-disabled"
          >
            不可编辑
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              disabled=""
              maxlength="-1"
              name=""
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        信息超长状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签超长时最多十个字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        内容位置
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            左对齐
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            居中
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--center t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            右对齐
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--right t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        竖排样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-input t-input--layout-vertical t-input--size-small"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-error-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              
            </div>
          </div>
          <!--v-if-->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        非通栏样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small"
        style="border-radius: 6px; margin: 0px 16px;"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        标签外置样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        style="--td-input-vertical-padding: 12px; background-color: rgb(255, 255, 255); padding: 16px 16px 8px;"
      >
        <div
          class="input-example__label"
        >
          标签文字
        </div>
        <div
          class="t-input t-input--layout-horizontal t-input--size-small"
          style="border: 1px solid rgba(220,220,220,1); border-radius: 6px;"
        >
          <div
            class="t-input__wrap--prefix"
          >
            <div
              class="t-input__icon--prefix"
            >
              <!--v-if-->
            </div>
            <div
              class="t-input__label"
            >
              <!---->
            </div>
          </div>
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input__content t-input--default"
            >
              <input
                autocomplete="Off"
                class="t-input__control t-input--default"
                maxlength="-1"
                name=""
                placeholder="请输入文字"
                type="text"
              />
              <!--v-if-->
              <!--v-if-->
              <div
                class="t-input__wrap--suffix-icon"
              >
                
                <svg
                  class="t-icon t-icon-error-circle-filled"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
                
              </div>
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义样式输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        style="--td-input-bg-color: rgba(44, 44, 44, 1); --td-input-border-color: rgba(75, 75, 75, 1); --td-input-default-text-color: rgba(255, 255, 255, 1); --td-input-placeholder-text-color: rgba(255, 255, 255, 0.35); --td-input-label-text-color: rgba(255, 255, 255, 1);"
      >
        <div
          class="t-input t-input--layout-horizontal t-input--size-small"
        >
          <div
            class="t-input__wrap--prefix"
          >
            <div
              class="t-input__icon--prefix"
            >
              <!--v-if-->
            </div>
            <div
              class="t-input__label"
            >
              标签文字
            </div>
          </div>
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input__content t-input--default"
            >
              <input
                autocomplete="Off"
                class="t-input__control t-input--default"
                maxlength="-1"
                name=""
                placeholder="请输入文字"
                type="text"
              />
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Input > Input prefixVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        
        <svg
          class="t-icon t-icon-app"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        
        <svg
          class="t-icon t-icon-app"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
      </div>
      <div
        class="t-input__label"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;

exports[`Input > Input specialVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        输入密码
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          type="password"
        />
        <div
          class="t-input__wrap--clearable-icon"
        >
          <svg
            class="t-icon t-icon-close-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        验证码
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="输入验证码"
          type="text"
        />
        <!--v-if-->
        <div
          class="t-input__wrap--suffix"
        >
          
          <div
            class="suffix"
          >
            <div
              class="suffix--line"
            />
            <image
              aria-label="验证码"
              aria-role="img"
              class="image"
              mode="heightFix"
              src="https://wwcdn.weixin.qq.com/node/wework/images/202010241547.ac6876be9c.png"
            />
          </div>
          
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        手机号
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="输入手机号码"
          type="text"
        />
        <!--v-if-->
        <div
          class="t-input__wrap--suffix"
        >
          
          <div
            style="display: flex; align-items: center;"
          >
            <div
              class="suffix--line"
            />
            <div
              aria-role="button"
              class="verify"
            >
              发送验证码
            </div>
          </div>
          
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        价格
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--right t-input--default"
          maxlength="-1"
          name=""
          placeholder="0.00"
          type="text"
        />
        <!--v-if-->
        <div
          class="t-input__wrap--suffix"
        >
          元
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        数量
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--right t-input--default"
          maxlength="-1"
          name=""
          placeholder="填写个数"
          type="text"
        />
        <!--v-if-->
        <div
          class="t-input__wrap--suffix"
        >
          个
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;

exports[`Input > Input statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label t-input-is-error"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--error"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--error"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-input__tips t-input--left"
      >
        辅助说明
      </div>
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label t-is-disabled"
      >
        不可编辑
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          disabled=""
          maxlength="-1"
          name=""
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;

exports[`Input > Input suffixVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          
        </div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入手机号码"
          type="text"
        />
        <!--v-if-->
        <div
          class="t-input__wrap--suffix"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
               操作按钮 
              
            </span>
            <!---->
          </button>
          
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-user-avatar"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 10.5c1.24 0 2.42.31 3.5.88v1.12h1v-1.14a.94.94 0 00-.49-.84 8.48 8.48 0 00-8.02 0 .94.94 0 00-.49.84v1.14h1v-1.12A7.47 7.47 0 018 10.5zM10.5 6a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0zm-1 0a1.5 1.5 0 10-3 0 1.5 1.5 0 003 0z"
              fill="currentColor"
            />
            <path
              d="M2.5 1.5a1 1 0 00-1 1v11a1 1 0 001 1h11a1 1 0 001-1v-11a1 1 0 00-1-1h-11zm11 1v11h-11v-11h11z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;
